new petterns, mediator, iterator, memento

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -13,3 +13,7 @@
 /responsibilityPattern/
 /commandPattern/
 /interpreterPattern/
+/iteratorPattern/
+/mediatorPattern/
+/mementoPattern/
+/observerPattern/
